--- a/heart.html
+++ b/heart.html
@@ -31,6 +31,7 @@
             position: relative;
             width: 40px;
             height: 50px;
+            margin-top: 150px;
             background: -webkit-linear-gradient(#fcbb00 0%, #fd3101 100%);
             background: linear-gradient(#fcbb00 0%, #fd3101 100%);
             text-align: center;
@@ -83,8 +84,10 @@
 </style>
 
 <body>
-    <div class="wrapper"></div>
-    <div class="heart"></div>
+    <div class="container">
+        <div class="wrapper"></div>
+        <center> <div class="heart" ></div></center>
+    </div>
 </body>
 
 </html>
